--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/src/assets/images/min-logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Little Aretha</title>
+  <meta name="description" content="Little Aretha - L'hommage vibrant à la Reine de la Soul. 11 musiciens, 1 voix, une expérience unique." />
+  <title>Little Aretha | Tribute to the Queen of Soul</title>
+
+  <!-- Google Fonts - Playfair Display pour les titres -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
