--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/src/assets/images/min-logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Little Aretha - L'hommage vibrant à la Reine de la Soul. 11 musiciens, 1 voix, une expérience unique." />
+  <meta name="description" content="Little Aretha - L'hommage vibrant à la Reine de la Soul. 10 musiciens, 1 chanteuse, une expérience unique." />
   <title>Little Aretha | Tribute to the Queen of Soul</title>
 
   <!-- Google Fonts - Playfair Display pour les titres -->
